--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lab1</title> 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script src="js/data.js"></script>
     <style>
         body {
             margin: 0;
@@ -143,21 +144,21 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                        <input type="button" name="-5" value="-5">
-                        <input type="button" name="-4" value="-4">
-                        <input type="button" name="-3" value="-3">
-                        <input type="button" name="-2" value="-2"> <br>
-                        <input type="button" name="-1" value="-1"> 
-                        <input type="button" name="0" value="0"> 
-                        <input type="button" name="1" value="1"> 
-                        <input type="button" name="2" value="2">
-                        <input type="button" name="3" value="3"> 
+                        <input type="button" name="-5" value="-5" onclick="getCurrentX(this.value)">
+                        <input type="button" name="-4" value="-4" onclick="getCurrentX(this.value)">
+                        <input type="button" name="-3" value="-3" onclick="getCurrentX(this.value)">
+                        <input type="button" name="-2" value="-2" onclick="getCurrentX(this.value)"> <br>
+                        <input type="button" name="-1" value="-1" onclick="getCurrentX(this.value)"> 
+                        <input type="button" name="0" value="0" onclick="getCurrentX(this.value)"> 
+                        <input type="button" name="1" value="1" onclick="getCurrentX(this.value)"> 
+                        <input type="button" name="2" value="2" onclick="getCurrentX(this.value)">
+                        <input type="button" name="3" value="3" onclick="getCurrentX(this.value)"> 
                         </td>
                     </tr>
                     <!--Изменение Y-->
                     <tr id="changeyrow">
                         <td>Изменение Y</td>
-                        <td><input type="text" placeholder="Введите число от -5 до 3"></td>
+                        <td><input id="yinput" type="text" placeholder="Введите число от -5 до 3" onchange="updateY()"></td>
                     </tr>
                     <!--Изменение R-->
                     <tr id="changerrow">
