--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Lab1</title> 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="js/data.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="module" src="js/main.js"></script>
     <style>
         body {
@@ -210,10 +211,11 @@
             <td>
                 <table id="resulttable">
                     <tr>
-                        <td>Время попадания</td>
-                        <td>Данные попадания</td>
+                        <td>X</td>
+                        <td>Y</td>
+                        <td>R</td>
                         <td>Результат</td>
-                        <td>Время отправки запроса</td>
+                        <td>Время обработки запроса</td>
                     </tr>
                 </table>
             </td>
