--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,12 @@
             font-size: large;
             font-family: cursive;
         }
+
+        input[type="button"]:hover, #submit-data:hover {
+            background-color: #1ed91e;
+            color: #edf0ee;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -215,7 +221,8 @@
                         <td>Y</td>
                         <td>R</td>
                         <td>Результат</td>
-                        <td>Время обработки запроса</td>
+                        <td>Время обработки запроса, нс</td>
+                        <td>Текущее время</td>
                     </tr>
                 </table>
             </td>
